--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@svgr/webpack": "^8.1.0",
     "@types/circular-dependency-plugin": "^5.0.6",
+    "@types/compose-function": "^0.0.32",
     "@types/node": "^20.8.5",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
@@ -77,10 +78,13 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "classnames": "^2.3.2",
+    "compose-function": "^3.0.3",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0"
   }
 }
